frontend/tests/errors/ER-025/fixed_operator_not_implemented/test.vx
!!a:#u8.8;
!!b:#u8.8;

&^main() -> #i32 {
  (a & b) ? 1 : 0
}
